补充 JVM 知识、堆内存选项、GC 选项